# PolarPrivate_OpenSource

./: CLAUDE.md  PolarSoul.md  README.md  TEST-CLUSTER.md  capabilities.json  package-lock.json  polaris.json  roadmap.md
backend/: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/Start/: restart.sh  start.sh.bak-260713  stop.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_management_api.py  003_proxy_binding_auth_header.py  007_owner_id.py  (+10 more)
backend/app/: __init__.py  cli.py  logging_config.py  main.py
backend/tests/: conftest.py  test_api_bindings.py  test_api_bindings_extended.py  test_api_d_class.py  test_api_dashboard.py  test_api_dashboard_extended.py  test_api_export.py  test_api_logs.py  test_api_onboarding.py  test_api_onboarding_extended.py  test_api_projects.py  test_api_projects_extended.py  test_api_proxy.py  test_api_proxy_extended.py  test_api_render.py  test_api_sanitize.py  test_api_secrets.py  test_api_secrets_extended.py  test_api_secrets_reveal.py  test_api_settings.py  test_api_settings_extended.py  test_api_test_center.py  test_api_vault_change_password.py  test_api_vault_extensions.py  test_cli.py  test_concurrency_limits.py  test_db.py  test_db_bootstrap.py  test_demo_seed.py  test_exceptions.py  test_export_format.py  test_integration.py  test_load_balance.py  test_log_buffer.py  test_logging.py  test_logging_extended.py  test_minimax_m3_gateway.py  test_models_dev_limits_proxy.py  test_pii_scanner.py  test_proxy_fallback.py  (+16 more)
sdk/: pyproject.toml
sdk/tests/: test_middleware.py
(+145 files in other folders)
