[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privportal-backend"
version = "0.1.0"
description = "PrivPortal backend — local vault, API, and proxy services"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sqlalchemy>=2.0.49,<3",
    "alembic>=1.18.0,<2",
    "cryptography>=46.0.0,<47",
    "structlog>=25.0,<26",
    "typer>=0.24.0,<0.25",
    "fastapi>=0.135.0,<1",
    "httpx>=0.28.0,<1",
    "uvicorn[standard]>=0.44.0,<0.45",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "markdown-it-py>=3.0,<4",
]

[project.scripts]
privportal = "app.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.8.0,<1",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
