[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "privportal-sdk"
version = "0.1.0"
description = "Lightweight SDK for PolarPrivate — sanitize/resolve text using identity mappings"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/privportal_sdk"]
